# aoc_2020

./: .gitignore  README.md  STATS.md
day_01/: 1.hs
day_02/: 2.hs
day_03/: 3.hs
day_04/: 4.hs
day_05/: 5.hs
day_06/: 6.hs
day_07/: 7.hs
day_08/: 8.hs  Interpreter.hs
day_09/: 9.hs
day_10/: 10.hs
day_11/: 11.hs
day_12/: 12.hs
day_13/: 13.hs
day_14/: 14.hs
day_15/: 15.hs
day_16/: 16.hs
day_17/: 17.hs
day_18/: 18.hs  aoc.cabal  first.cf  second.cf
day_18/bnfc/: Abs.hs  Doc.txt  Lex.x  Par1.y  Par2.y  Print.hs  Skel.hs  Test.hs
day_19/: 19.hs
day_20/: 20.hs
day_21/: 21.hs
day_22/: 22.hs
day_23/: 23.hs  aoc.cabal
day_24/: 24.hs
day_25/: 25.hs
