cabal-version: 1.12

name:           aoc
version:        1.0.0.0
author:         Dominik Wołek
copyright:      2020 Dominik Wołek
build-type:     Simple
extra-source-files:

source-repository head
  type: git
  location: https://github.com/githubuser/instant

executable 18
  main-is: 18.hs
  other-modules:
  hs-source-dirs: .
  ghc-options:
  build-depends:
      base >=4.7 && <5
    , math
  default-language: Haskell2010